# chess

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README  TODO  build_lib_script.sh
src/: ai.cc  ai.hh  ai.hxx  awesome-ai.cc  awesome-ai.hh  chess-manager.cc  chess-manager.hh  chessboard-adapter.cc  chessboard-adapter.hh  chessboard-interface.cc  chessboard-interface.hh  chessboard.cc  chessboard.hh  chessboard.hxx  class-loader.cc  class-loader.hh  color.hh  game-engine.cc  game-engine.hh  listener.cc  listener.hh  main-cha.cc  main.cc  move.cc  move.hh  move.hxx  observer.cc  observer.hh  option-parser.cc  option-parser.hh  piece-type.hh  piece.cc  piece.hh  piece.hxx  player.cc  position.cc  position.hh  position.hxx  pretty_printer_listener.cc  pretty_printer_listener.hh  (+1 more)
src/parser/: option-parser.cc  option-parser.hh  parserPGN.cc  parserPGN.hh
src/player/: player-abstract.cc  player-abstract.hh  player-human.cc  player-human.hh  player-pgn.cc  player-pgn.hh  player.cc  player.hh
tests/examples/: checkmate.out  draw.out  invalid.out  lost.out  stalemate_enpassant.out  valid.out
